[gd_scene load_steps=10 format=2]

[ext_resource path="res://SideScroller/SideScrollTileMap/CaveBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://SideScroller/SideScrollTileMap/SideScrollTileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/xolonium-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://RNAseq_input.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://Aac.tscn" type="PackedScene" id=6]
[ext_resource path="res://game_over_display.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 133, 128, 0, 0, 0, 0, 650, 130, 0, 0, 0, 0, 683, 190, 0, 0, 0, 0, 754, 199, 0, 0, 0, 0, 790, 127, 0, 0, 0, 0, 1303, 124, 0, 0, 0, 0, 1333, 190, 0, 0, 0, 0, 1462, 202, 0, 0, 0, 0, 1495, 133, 0, 0, 0, 0, 1689, 133, 0, 0, 0, 0, 1767, 205, 0, 0, 0, 0, 1785, 499, 0, 0, 0, 0, 1722, 543, 0, 0, 0, 0, 1728, 591, 0, 0, 0, 0, 1788, 639, 0, 0, 0, 0, 1794, 906, 0, 0, 0, 0, 458, 915, 0, 0, 0, 0, 407, 846, 0, 0, 0, 0, 365, 852, 0, 0, 0, 0, 344, 912, 0, 0, 0, 0, 131, 903, 0, 0, 0, 0, 129, 380, 0, 0, 0, 0, 201, 361, 0, 0, 0, 0, 201, 323, 0, 0, 0, 0, 167, 285, 0, 0, 0, 0, 133, 259, 0, 0, 0, 0, 131, 128 )
}

[sub_resource type="DynamicFont" id=2]
size = 74
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
modulate = Color( 0.968627, 0.968627, 0.972549, 1 )
script = ExtResource( 5 )
aac_scene = ExtResource( 6 )

[node name="ColorRect" parent="." instance=ExtResource( 7 )]
visible = false

[node name="SideScrollTileMap" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.254902, 0.819608, 0.0745098, 1 )
tile_data = PoolIntArray( -131057, 0, 0, -131056, 0, 1, -131055, 0, 1, -131054, 0, 1, -131053, 0, 1, -131052, 0, 1, -131051, 0, 1, -131050, 0, 1, -131049, 0, 2, -65522, 0, 0, -65521, 0, 131078, -65520, 0, 65537, -65519, 0, 65537, -65518, 0, 65537, -65517, 0, 65537, -65516, 0, 65537, -65515, 0, 65537, -65514, 0, 65537, -65513, 0, 131077, -65512, 0, 2, 0, 0, 0, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 131078, 15, 0, 65537, 16, 0, 65537, 17, 0, 65537, 18, 0, 65537, 19, 0, 65537, 20, 0, 65537, 21, 0, 65537, 22, 0, 65537, 23, 0, 65537, 24, 0, 131077, 25, 0, 2, 65536, 0, 65536, 65537, 0, 65541, 65538, 0, 131073, 65539, 0, 131073, 65540, 0, 131073, 65541, 0, 131073, 65542, 0, 131073, 65543, 0, 131073, 65544, 0, 65542, 65545, 0, 65541, 65546, 0, 131073, 65547, 0, 131073, 65548, 0, 131073, 65549, 0, 131073, 65550, 0, 131073, 65551, 0, 131073, 65552, 0, 65542, 65553, 0, 65537, 65554, 0, 65541, 65555, 0, 131073, 65556, 0, 131073, 65557, 0, 65542, 65558, 0, 65537, 65559, 0, 65537, 65560, 0, 65537, 65561, 0, 65538, 131072, 0, 65536, 131073, 0, 65538, 131080, 0, 131072, 131081, 0, 131074, 131088, 0, 131072, 131089, 0, 131073, 131090, 0, 131074, 131093, 0, 131072, 131094, 0, 65542, 131095, 0, 65537, 131096, 0, 65537, 131097, 0, 65538, 196608, 0, 65536, 196609, 0, 131077, 196610, 0, 2, 196630, 0, 65536, 196631, 0, 65541, 196632, 0, 131073, 196633, 0, 131074, 262144, 0, 65536, 262145, 0, 65541, 262146, 0, 131074, 262166, 0, 65536, 262167, 0, 65538, 327680, 0, 65536, 327681, 0, 65538, 327702, 0, 65536, 327703, 0, 65538, 393216, 0, 65536, 393217, 0, 65538, 393237, 0, 0, 393238, 0, 131078, 393239, 0, 65538, 458752, 0, 65536, 458753, 0, 65538, 458773, 0, 131072, 458774, 0, 65542, 458775, 0, 65538, 589822, 0, 196608, 589823, 0, 6, 524288, 0, 131078, 524289, 0, 65538, 524310, 0, 65536, 524311, 0, 65538, 655359, 0, 65536, 589824, 0, 65537, 589825, 0, 65538, 589846, 0, 65536, 589847, 0, 65538, 720895, 0, 65536, 655360, 0, 65537, 655361, 0, 65538, 655364, 0, 0, 655365, 0, 2, 655382, 0, 65536, 655383, 0, 65538, 786431, 0, 65536, 720896, 0, 65537, 720897, 0, 131077, 720898, 0, 1, 720899, 0, 1, 720900, 0, 131078, 720901, 0, 131077, 720902, 0, 1, 720903, 0, 1, 720904, 0, 1, 720905, 0, 1, 720906, 0, 1, 720907, 0, 1, 720908, 0, 1, 720909, 0, 1, 720910, 0, 1, 720911, 0, 1, 720912, 0, 1, 720913, 0, 1, 720914, 0, 1, 720915, 0, 1, 720916, 0, 1, 720917, 0, 1, 720918, 0, 131078, 720919, 0, 65538, 851967, 0, 65536, 786432, 0, 65537, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65541, 786438, 0, 131073, 786439, 0, 131073, 786440, 0, 131073, 786441, 0, 131073, 786442, 0, 65542, 786443, 0, 65541, 786444, 0, 131073, 786445, 0, 131073, 786446, 0, 131073, 786447, 0, 65542, 786448, 0, 65541, 786449, 0, 131073, 786450, 0, 131073, 786451, 0, 65542, 786452, 0, 65541, 786453, 0, 131073, 786454, 0, 131073, 786455, 0, 131074, 917503, 0, 131072, 851968, 0, 131073, 851969, 0, 131073, 851970, 0, 131073, 851971, 0, 131073, 851972, 0, 131073, 851973, 0, 131074, 851978, 0, 131072, 851979, 0, 131074, 851983, 0, 131072, 851984, 0, 131074, 851987, 0, 131072, 851988, 0, 131074 )

[node name="CaveBackground" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.152941, 0.878431, 0.270588, 0.839216 )
position = Vector2( 905, 543 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -4, 0 )
polygon = PoolVector2Array( 2, 2, 1289, 25, 1918, 119, 1874, 221, 1870, 1012, 1789, 1056, 230, 994, 102, 923, 353, 916, 372, 851, 429.163, 854.105, 455, 926, 1808, 929, 1800, 615, 1731, 586, 1731, 533, 1801.33, 507.317, 1796.63, 210.119, 1754, 207, 1727, 187, 1715, 122, 1492, 117, 1464, 202, 1335, 196, 1322, 98, 787.394, 105.353, 751, 199, 699, 202, 669.937, 106.442, 178, 111, 132, 125, 112, 278, 202, 294, 197, 345, 125, 368, 109, 976, 1, 984, 47, 231, 8, 48 )

[node name="RNAInput" parent="." instance=ExtResource( 4 )]
margin_left = 876.0
margin_top = 519.0
margin_right = 916.0
margin_bottom = 559.0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnPath" type="PathFollow2D" parent="Path2D"]
position = Vector2( 133, 128 )
rotation = 0.00386812

[node name="Timer" type="Timer" parent="."]

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 956.0
margin_top = 30.0
margin_right = 1020.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="Timer_score" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_score" to="." method="_on_Timer_score_timeout"]
